PROJECT(BasicViewersExample)

ENABLE_TESTING()

SET(PROJECT_VERSION_MAJOR "1")
SET(PROJECT_VERSION_MINOR "0")
SET(PROJECT_VERSION_PATCH "0")
SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

# CMAKE SETTINGS

#Require cmake 2.8 at least
IF(DEFINED CMAKE_PATCH_VERSION)
  CMAKE_MINIMUM_REQUIRED(VERSION "2.8" FATAL_ERROR)
ELSE(DEFINED CMAKE_PATCH_VERSION)
  MESSAGE(FATAL_ERROR "Your version of CMake is too old, please use at least cmake 2.6")
ENDIF(DEFINED CMAKE_PATCH_VERSION)


# Application  Name
SET(app BasicViewersExample)

# INSTALLATION DIRECTORIES
SET(MODULE_DIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib)
SET(DATA_DIR ${CMAKE_INSTALL_PREFIX}/data)

# CHECK FLOWVR DEPENDENCY

FIND_PACKAGE(FlowVR REQUIRED)
IF(FLOWVR_FOUND)
 MESSAGE(STATUS "FlowVR Found")
ELSE(FLOWVR_FOUND)
 MESSAGE(SEND_ERROR "FlowVR Not Found")
ENDIF(FLOWVR_FOUND)


# CHECK FLOWVRRENDER DEPENDENCY
FIND_PACKAGE(FlowVRRender REQUIRED)
IF(FLOWVRRENDER_FOUND)
 MESSAGE(STATUS "FlowVR-Render Found")
ELSE(FLOWVRRENDER_FOUND)
 MESSAGE(SEND_ERROR "FlowVR-Render Not Found")
ENDIF(FLOWVRRENDER_FOUND)

# Configuration Files 

FOREACH(shell sh)
  CONFIGURE_FILE(config/app-config.${shell}.in ${app}-config.${shell} @ONLY)
  INSTALL(PROGRAMS ${CMAKE_BINARY_DIR}/${app}-config.${shell} DESTINATION ${BIN_DIR})
ENDFOREACH(shell sh)

INSTALL( DIRECTORY config DESTINATION ${CMAKE_INSTALL_PREFIX} PATTERN ".svn" EXCLUDE PATTERN  "*.in" EXCLUDE )

ADD_SUBDIRECTORY(src)

# INSTALL IMAGES FILES
FILE(GLOB images-files data/images/*.png)
INSTALL(FILES ${images-files} DESTINATION ${DATA_DIR}/images)
